--- a/public/main.css
+++ b/public/main.css
@@ -78,6 +78,7 @@ body{
     background: white;
     width: 85%;
     border-radius: 25px;
+    color: white;
 }
 .leftside nav div{
     cursor: pointer;
@@ -89,7 +90,6 @@ body{
     align-items: center;
     overflow: hidden;
     width: 70px;
-    color: var(--preto);
     background: linear-gradient(70deg,var(--cor2), var(--base2));
 }
 .leftside nav div:hover{
