--- a/pages/chat/main.css
+++ b/pages/chat/main.css
@@ -4,7 +4,7 @@
 }
 html,body{
     overflow: hidden;
-    background: url("http://localhost:3333/resources/assets/FundoSocial.png");
+    background: url("../../resources/assets/FundoSocial.png");
     background-size: 20%;
     height: 100%;
 }
@@ -93,6 +93,8 @@ i{
     padding: 1%;
     font-size: 35px;
     width: 90%;
+    border: none;
+    border-bottom: 2px solid #ccc;
 }
 #message-form button{
     padding: 1%;
