--- a/pages/fitness/main.css
+++ b/pages/fitness/main.css
@@ -355,12 +355,15 @@ footer .lista h3{
 }
 footer .lista > *{
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     text-decoration: none;
+    font-weight: bold;
     color: #000;
     margin: 2%;
-    width: 50%;
+    width: 70%;
+    margin: 5px;
+    font-size: 25px;
 }
 footer .lista a:hover{
     color: rgb(98, 112, 236);
