--- a/pages/alimentos/main.css
+++ b/pages/alimentos/main.css
@@ -22,7 +22,8 @@ html,body{
 }
 
 body{
-    background-image: url(../../public/resources/assets/FundoSocial.png);
+    background-image: url(../../resources/assets/FundoSocial.png);
+    background-size: 20%;
 }
 
 .menu{
@@ -137,27 +138,35 @@ body{
 
 /* Screens da pagina */
 
+#carrosel{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+#carrosel .slider{
+    display: none;
+    justify-content: center;
+    align-items: center;
+    width: 95%;
+    height: 100%;
+}
+#carrosel .slider.on{
+    display: flex;
+}
+#carrosel .slider img{
+    height: 100%;
+}
+
 .screen1{
     display: flex;
     flex-direction: row;
     justify-content: start;
     align-items: center;
     width: 100%;
-    height: 90vh;
-    background-color: red;
+    height: 90vh;   
 }
-
-#container img{
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    transition: 0.25s;
-}
-
-#container #on{
-    opacity: 1;
-}
-
 .text{
     display: flex;
     flex-direction: column;
