--- a/public/main.css
+++ b/public/main.css
@@ -154,6 +154,7 @@ body{
     width: 100%;
     height: 85vh;
     border-radius: 1em;
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
 }
 
 .on{
@@ -193,6 +194,7 @@ body{
 }
 
 #prev-button, #next-button{
+    transition: 200ms;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -389,10 +391,6 @@ body{
     top: 0;
     margin-left: -4em;
     background-color: var(--cor2);
-}
-
-.infoe{
-    
 }
 
 /* PAGINA DE LOGIN E CADASTRO */
