--- a/pages/alimentos/main.css
+++ b/pages/alimentos/main.css
@@ -139,11 +139,15 @@ body{
 /* Screens da pagina */
 
 #carrosel{
+    background: white;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 90%;
     height: 100%;
+}
+#carrosel img{
+    box-shadow: inset 10px 0 500px black;   
 }
 #carrosel .slider{
     display: none;
@@ -162,7 +166,7 @@ body{
 .screen1{
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
     width: 100%;
     height: 90vh;   
@@ -179,51 +183,46 @@ body{
     padding: 4%;
     font-size: 2.5em;
 }
-
+.doencas1 div , .doencas2 div{
+    padding: 30px;
+    background: #fff;
+}
+.doencas1 , .doencas2{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    padding: 50px;
+}
+.doencas1 h1, .doencas2 h1{
+    font-size: 40px;
+}
+.doencas1 p, .doencas2 p{
+    font-size: 30px;
+}
+.doencas1 img,.doencas2 img{
+    margin: 20px;
+    padding: 25px;
+    background: var(--base2);
+}
 .doencas1{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
-    background-color: var(--cor1);
+    background:linear-gradient(var(--cor1),var(--base2));
 }
-
 .doencas2{
-    display: flex;
-    flex-direction: column;
+    background:linear-gradient(var(--base2),var(--cor1));
+}
+
+.doencas1 img,.doencas2 img{
+    height: 80%;
+}
+
+.doencas1 section,.doencas2 section{
+    justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100vh;
-    background-color: var(--base2);
-}
-
-.doencas1 h1{
-    font-size: 4em;
-}
-
-.doencas1 p{
-    font-size: 2em;
-    text-align: center;
-}
-
-.doencas1 img{
-    background-color: red;
-    width: 45%;
-    height: 45%;
-}
-
-.doencas2 h1{
-    font-size: 4em;
-}
-
-.doencas2 p{
-    font-size: 2em;
-    text-align: center;
-}
-
-.doencas2 img{
-    background-color: red;
-    width: 45%;
-    height: 45%;
+    display: flex;
+    height: 100%;
+    background: white;
+    border-radius: 25px;
 }
