--- a/public/main.css
+++ b/public/main.css
@@ -43,6 +43,10 @@ body{
     height:10vh;
     background: linear-gradient(30deg,var(--cor2), var(--base2));
 }
+.imglogo{
+    width: 8em;
+    height: 8em;
+}
 #btnmenu{
     transition: 100ms;
     margin: 0 20px 0 20px;
@@ -376,23 +380,80 @@ body{
     flex-direction: row;
     width: 100%;
     height: 100vh;
-    align-items: center;
-    justify-content: center;
-    position: relative;
     background-color: none;
 }
 
-.sobreplat h1{
-    text-align: center;
-    font-size: 5em;
-    border: 1px solid black;
-    border-radius: 0em 0em 1rem 1rem;
-    position: absolute;
-    top: 0;
-    margin-left: -4em;
-    background-color: var(--cor2);
+.infoe{
+    display: flex;
+    flex-direction: column;
+    background-color: var(--branco);
+    height: 100vh;
+    width: 40%;
 }
 
+.box{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 20%;
+    padding: 1rem;
+    align-items: center;
+}
+
+.imgs{
+    width: 35%;
+    height: 100%;
+}
+
+img{
+    /* width: 100%; */
+    height: 100%;
+    border-radius: 5em;
+}
+
+.textes{
+    font-size: 2em;
+    text-align: center;
+    width: 65%;
+}
+
+.infod{
+    display: flex;
+    width: 60%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+.img1{
+    z-index: 1;
+    margin-top: -30%;
+    width: 24em;
+    height: 24em;
+    border-radius: 3em;
+    border: 1px solid black;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.quadv{
+    width: 30em;
+    height: 30em;
+    margin-left: -20%;
+    border-radius: 3em;
+    background-color: var(--cor2);
+    border: 1px solid black;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.img2{
+    margin-top: 30%;
+    margin-left: -20%;
+    width: 24em;
+    height: 24em;
+    border-radius: 3em;
+    border: 1px solid black;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
 /* PAGINA DE LOGIN E CADASTRO */
 
 /* PAGINA DE PERFIL */
