--- a/public/main.css
+++ b/public/main.css
@@ -454,6 +454,126 @@ img{
     border: 1px solid black;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
+
+/* receitas saudaveis */
+.receitas{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 100%;
+    background-color: var(--cor2);
+    justify-content: center;
+    align-items: center;
+}
+
+.hrece{
+    height: 10vh;
+    width: 100%;
+    font-size: 4em;
+    text-align: center;
+}
+
+.quadreceita{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 90vh;
+    width: 100%;
+    background-image: url(resources/assets/fruitsocial.jpg);
+    background-size: 20%;
+}
+
+.quadre{
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    height: 50%;
+    background-color: var(--cor2);
+    margin: 1rem;
+    border: 1px solid black;
+    border-radius: 2em 2em 5em 5em;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.600);
+}
+
+.imgre{
+    border-radius: 2em 2em 0 0;
+    width: 100%;
+    height: 80%;
+}
+
+.labelre{
+    display: flex;
+    font-size: 3em;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 1rem;
+}
+
+/* CEOS */
+.ceos{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--branco);
+}
+
+.hceo{
+    text-align: center;
+    font-size: 8em;
+    width: 100%;
+    height: 10vh;
+}
+
+.quadceo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
+    height: 90vh;
+}
+
+.ceo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 30%;
+    height: 60%;
+    margin: 1rem;
+}
+
+.fotoceo{
+    z-index: 1;
+    width: 50%;
+    height: 55%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
+    border: 1px solid black;
+    border-radius: 10em;
+    margin-top: 2em;
+}
+
+.label{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    height: 55%;
+    background: linear-gradient(var(--base2), var(--cor2));
+    padding: 1rem;
+    margin-top: -2em;
+    border: 1px solid black;
+    border-radius: 2em;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+}
+
+.nomeceo, .statusceo{
+    text-align: center;
+    font-size: 4em;
+}
 /* PAGINA DE LOGIN E CADASTRO */
 
 /* PAGINA DE PERFIL */
