--- a/pages/alimentos/main.css
+++ b/pages/alimentos/main.css
@@ -145,8 +145,31 @@ body{
     align-items: center;
     width: 90%;
     height: 100%;
+    position: relative;
+    padding: 20px;
+}
+#carrosel i{
+    transition: 299ms;
+    margin: 10px;
+    background: var(--cor1);
+    border-radius: 50%;
+    cursor: pointer;
+    position: absolute;
+    z-index: 2;
+    font-size: 150px;
+}
+#carrosel i:hover{
+    font-size: 160px;
+}
+i.left{
+    left: 0;
+}
+i.right{
+    right: 0;
 }
 #carrosel img{
+    z-index: 1;
+    width: 90%;
     box-shadow: inset 10px 0 500px black;   
 }
 #carrosel .slider{
@@ -162,7 +185,9 @@ body{
 #carrosel .slider img{
     height: 100%;
 }
-
+img{
+    object-fit: cover;
+}
 .screen1{
     display: flex;
     flex-direction: row;
@@ -225,4 +250,46 @@ body{
     height: 100%;
     background: white;
     border-radius: 25px;
+}
+footer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background: var(--cor1);
+    width: 100%;
+    height: 30vh;
+}
+footer img{
+    width: 250px;
+}
+footer .lista{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 25%;
+    height: 90%;
+    font-size: 20px;
+}
+footer .lista h3{
+    font-weight: bold;
+    font-size: 30px;
+}
+footer .lista > *{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    text-decoration: none;
+    font-weight: bold;
+    color: #000;
+    margin: 2%;
+    width: 70%;
+    margin: 5px;
+    font-size: 25px;
+}
+footer .lista a:hover{
+    color: rgb(98, 112, 236);
+}
+footer .lista i{
+    font-size: 30px;
 }
