--- a/public/main.css
+++ b/public/main.css
@@ -398,7 +398,6 @@ body{
     height: 20%;
     padding: 1rem;
     align-items: center;
-    border: 0.5px solid black;
 }
 
 .imgs{
@@ -407,7 +406,6 @@ body{
     align-items: center;
     width: 35%;
     height: 100%;
-    border: 1px solid black;
     border-radius: 5em;
 }
 
@@ -437,7 +435,6 @@ body{
     width: 24em;
     height: 24em;
     border-radius: 3em;
-    border: 1px solid black;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
@@ -447,17 +444,16 @@ body{
     margin-left: -20%;
     border-radius: 3em;
     background-color: var(--cor2);
-    border: 1px solid black;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .img2{
+    object-fit: cover;
     margin-top: 30%;
     margin-left: -20%;
     width: 26em;
     height: 24em;
     border-radius: 3em;
-    border: 1px solid black;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
@@ -473,6 +469,7 @@ body{
 }
 
 .hrece{
+    padding: 10px;
     height: 10vh;
     width: 100%;
     font-size: 4em;
@@ -491,13 +488,12 @@ body{
 }
 
 .quadre{
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     width: 30%;
     height: 50%;
     background-color: var(--cor2);
     margin: 1rem;
-    border: 1px solid black;
     border-radius: 2em 2em 5em 5em;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.600);
     transition: 0.25s;
@@ -524,14 +520,15 @@ body{
 }
 
 .off{
+    padding-top: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     flex-direction: column;
-    font-size: 2em;
-    width: 95%;
-    height: 100%;
+    font-size: 1.4em;
+    /* width: 95%; */
+    /* height: 100%; */
     visibility: hidden;
     transition: 0.25s;
 }
@@ -556,8 +553,9 @@ body{
 }
 
 .hceo{
+    padding: 0;
     text-align: center;
-    font-size: 8em;
+    font-size: 5em;
     width: 100%;
     height: 10vh;
 }
@@ -581,11 +579,11 @@ body{
 }
 
 .fotoceo{
+    object-fit: cover;
     z-index: 1;
     width: 50%;
     height: 60%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
-    border: 1px solid black;
     border-radius: 10em;
     margin-top: 2em;
 }
@@ -600,14 +598,16 @@ body{
     background: linear-gradient(var(--base2), var(--cor2));
     padding: 1rem;
     margin-top: -2em;
-    border: 1px solid black;
     border-radius: 2em;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
 }
-
-.nomeceo, .statusceo{
+.nomeceo{
     text-align: center;
-    font-size: 4em;
+    font-size: 3em;
+}
+.statusceo{
+    text-align: center;
+    font-size: 2em;
 }
 /* PAGINA DE LOGIN E CADASTRO */
 
@@ -673,7 +673,6 @@ body{
     height: 200px;
     background: white;
     border-radius: 50%;
-    border: 1px solid black;
 }
 .profile_screen.ativo > section .profile_image:hover::after{
     cursor: pointer;
@@ -755,7 +754,7 @@ footer{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background: var(--base2);
+    background: var(--cor2);
     width: 100%;
     height: 30vh;
 }
