--- a/public/main.css
+++ b/public/main.css
@@ -344,31 +344,32 @@ body{
     position: relative;
     align-items: center;
     justify-content: center;
-    background-color: var(--cor2);
+    background:linear-gradient(var(--cor2),var(--base2));
 }
-
 .quemsomos>h1{
     text-align: center;
     border: none;
-    font-size: 5em;
+    font-size: 4em;
     position: absolute;
     top: 0;
     border-radius: 1em;
-    background: linear-gradient(75deg, var(--base2), rgba(255, 255, 255, 0.15), var(--base2));
+    background: white;
     width: 12em;
-    height: 10vh;
+    margin-top: 1%;
+    box-shadow: 0 0 10px rgba(1, 1, 1, 0.3);
 }
 
 .informa{
+    box-shadow: 0 0 10px rgba(1, 1, 1, 0.3);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    text-align:justify;
     width: 85%;
     height: 75vh;
-    font-size: 3.8em;
-    background-color: var(--base2);
+    font-size: 3.2em;
+    background-color: white;
     padding: 4rem;
     border-radius: 1em;
     margin-top: 1em;
@@ -547,17 +548,22 @@ body{
 .ceos{
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 100%;
     height: 100vh;
-    background-color: var(--branco);
+    background:linear-gradient(49deg,var(--base2),var(--cor2));
 }
 
 .hceo{
     padding: 0;
     text-align: center;
     font-size: 5em;
-    width: 100%;
-    height: 10vh;
+    background: #fff;
+    padding: 20px;
+    margin: 20px;
+    border-radius: 25px;
+    /* width: 100%;
+    height: 10vh; */
 }
 
 .quadceo{
@@ -595,7 +601,8 @@ body{
     text-align: center;
     width: 100%;
     height: 55%;
-    background: linear-gradient(var(--base2), var(--cor2));
+    /* background: linear-gradient(var(--base2), var(--cor2)) */
+    background: #fff;
     padding: 1rem;
     margin-top: -2em;
     border-radius: 2em;
