--- a/public/main.css
+++ b/public/main.css
@@ -12,6 +12,9 @@ font-family: 'Roboto', sans-serif; */
 }
 
 /* Definições Basicas */
+img{
+    object-fit: cover;
+}
 *{
     padding: 0%;
     margin: 0%;
@@ -480,70 +483,97 @@ body{
 .quadreceita{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     height: 90vh;
     width: 100%;
     background-image: url(resources/assets/fruitsocial.jpg);
     background-size: 20%;
 }
-
 .quadre{
-    /* display: flex; */
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     flex-direction: column;
+    border-radius: 25px;
+    background: var(--cor2);
     width: 30%;
-    height: 50%;
-    background-color: var(--cor2);
-    margin: 1rem;
-    border-radius: 2em 2em 5em 5em;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.600);
-    transition: 0.25s;
+    height: 70%;
 }
-
-.quadre:hover{
-    height: 87vh;
+.quadre:hover img{
+    transform: scale(1.1)
 }
-
-.quadre:hover>.imgre{
-    height: 40%;
+.quadre:hover h1{
+    padding-bottom: 20px;
 }
-
-.quadre:hover>.off{
-    visibility: visible;
-    transition: 0.10s;
-}
-
-.imgre{
-    border-radius: 2em 2em 0 0;
+.quadre img{
+    transition: 300ms;
+    border-top-right-radius: 25px;
+    border-top-left-radius: 25px;
     width: 100%;
-    height: 80%;
-    transition: 0.25s;
+    height: 70%;
+    z-index: 1;
 }
-
-.off{
-    padding-top: 50px;
+.quadre h2{
+    color: #fff;
+    font-size: 30px;
+    transition: 300ms;
+    z-index: 0;
+    bottom: 0;
+    position: absolute;
+    margin-bottom: 200px;
+}
+.quadre:hover h2{
+    margin-bottom: 90px;
+}
+.quadre h1{
+    transition: 300ms;
+    padding-bottom: 60px;
+    font-size: 50px;
+}
+.recipe.on{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(5px);
+    z-index: 700;
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    flex-direction: column;
-    font-size: 1.4em;
-    /* width: 95%; */
-    /* height: 100%; */
-    visibility: hidden;
-    transition: 0.25s;
 }
-
-.labelre{
-    display: flex;
-    font-size: 3em;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin-top: 1rem;
-    transition: 0.5s;
+.recipe section{
+    padding: 30px;
+    width: 70%;
+    height: 85%;
+    background: #fff;
+    font-size: 25px;
+    border-radius: 25px;
 }
-
+.recipe i{
+    cursor: pointer;
+    z-index: 999;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: #fff;
+    font-size: 75px;
+    padding: 20px;
+}
+.recipe i:hover{
+    background: red;
+}
+hr{
+    margin: 0.75% 0 0.75% 0;
+}
+.recipe section div{
+    padding: 25px;
+}
+.recipe{
+    display: none;
+}
 /* CEOS */
 .ceos{
     display: flex;
@@ -582,6 +612,8 @@ body{
     width: 30%;
     height: 60%;
     margin: 1rem;
+    border-radius: 25px;
+    background: #fff;
 }
 
 .fotoceo{
@@ -606,7 +638,7 @@ body{
     padding: 1rem;
     margin-top: -2em;
     border-radius: 2em;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.6); */
 }
 .nomeceo{
     text-align: center;
