--- a/pages/alimentos/main.css
+++ b/pages/alimentos/main.css
@@ -138,6 +138,14 @@ body{
 
 /* Screens da pagina */
 
+.titulo{
+    text-align: center;
+    font-size: 55px;
+    padding: 20px;
+    background: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
 #carrosel{
     background: white;
     display: flex;
