--- a/pages/doencas/main.css
+++ b/pages/doencas/main.css
@@ -183,9 +183,11 @@ body > h1{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 250vh;
+    margin-top: 5%;
 }
-
+div h1{
+    box-shadow: 0 0 10px black;
+}
 .text{
     display: flex;
     flex-direction: column;
@@ -209,7 +211,6 @@ body > h1{
     background-color: var(--base2);
     border-radius: 1em;
     width: 90%;
-    height: 90%;
     padding: 2rem;
 }
 
@@ -223,7 +224,6 @@ body > h1{
     background-color: var(--base2);
     border-radius: 1em;
     width: 90%;
-    height: 90%;
     padding: 2rem;
     margin-top: 1rem;
 }
@@ -268,7 +268,13 @@ body > h1{
     border-radius: 0 0 6em 6em;
 
 }
-
+h1{
+    z-index: 999;
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .diabetes{
     display: flex;
     flex-direction: column;
@@ -301,12 +307,12 @@ body > h1{
 }
 
 .textsdia{
+    padding: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: var(--base2);
-    text-align: center;
     height: 100%;
     width: 60%;
     font-size: 3.5em;
@@ -353,6 +359,7 @@ body > h1{
     text-align: center;
     height: 100%;
     width: 60%;
+    padding: 20px;
     font-size: 3em;
 }
 
@@ -382,7 +389,6 @@ body > h1{
 .imgob{
     height: 40vh;
     width: 50%;
-    border-radius: 3em 3em 0 0;
 }
 
 .textsobe{
@@ -390,12 +396,11 @@ body > h1{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 80%;
+    width: 100%;
     height: 50vh;
     text-align: center;
     font-size: 2.5em;
     background-color: var(--base2);
-    border-radius: 2em 2em 5em 5em;
 }
 
 .hipertensao{
@@ -405,6 +410,7 @@ body > h1{
     align-items: center;
     height: 100vh;
     width: 100%;
+    padding: 20px;;
     background-color: var(--base2);
 }
 
@@ -428,7 +434,10 @@ body > h1{
     background-color: var(--cor1);
     border-radius: 0 0 3em 3em;
 }
-
+img{
+    border-radius: 25%;
+    object-fit: cover;
+}
 .imghiper{
     width: 40%;
     height: 50vh;
@@ -442,6 +451,8 @@ footer{
     background: var(--cor1);
     width: 100%;
     height: 30vh;
+    z-index: 999;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 footer img{
     width: 250px;
