--- a/pages/alimentos/main.css
+++ b/pages/alimentos/main.css
@@ -202,7 +202,7 @@ img{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 90vh;   
+    /* height: 90vh;    */
 }
 .text{
     display: flex;
