--- a/pages/doencas/main.css
+++ b/pages/doencas/main.css
@@ -186,7 +186,7 @@ body > h1{
     margin-top: 5%;
 }
 div h1{
-    box-shadow: 0 0 10px black;
+    /* box-shadow: 0 0 10px black; */
 }
 .text{
     display: flex;
